# cross-guild-league-bot

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  README.md  pyproject.toml
api/app/: main.py  models.py
discord/: README.md  main.py
discord-bot/: Dockerfile  ears.py  emojis.json  main.py  pyproject.toml  react_listener.py  scheduled_message.py  user_sync.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
models/: models.py  schemas.py
